@@ -249,8 +249,9 @@ struct options
     int data_loc;		/* interram start location       */
     int idata_loc;		/* indirect address space        */
     int code_loc;		/* code location start           */
-    int iram_size;		/* internal ram size (used only for error checking) */    
-    int xram_size;		/* external ram size (used only for error checking) */    
+    int iram_size;		/* internal ram size (used only for error checking) */   
+    int xram_size;		/* external ram size (used only for error checking) */
+	bool xram_size_set; /* since xram_size=0 is a possibility */
     int code_size;		/* code size (used only for error checking) */    
   };
 
